deps/crates/vendor/rustversion/tests/ui/bad-not.stderr
error: expected `(` after `not`
 --> tests/ui/bad-not.rs:1:20
  |
1 | #[rustversion::any(not)]
  |                    ^^^

error: expected `(`
 --> tests/ui/bad-not.rs:4:23
  |
4 | #[rustversion::any(not, not)]
  |                       ^
