deps/crates/vendor/rustversion/tests/ui/bad-not.rs
#[rustversion::any(not)]
struct S;

#[rustversion::any(not, not)]
struct S;

fn main() {}
